# calculator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake
src/: calculate.h  constants.h  fraction.h  functions.h  main.cpp  myBitset.h  operators.h  randomExpressions.h  test  test.cpp
